2005-11-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fs2schar.c,
	* device/lib/_fs2sint.c,
	* device/lib/_fs2slong.c: optimized inline asm

2005-11-21 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/_fs2slong.c, device/lib/_fs2sint.c, device/lib/_fs2char.c:
	  Better handling of floats between -1.0 and 0.0.

2005-11-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added missing "if"s as noted by Hubert Sack.
	  (the missing "if"s prohibited removal of redundant labels)

2005-11-19 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/_fs2slong.c, device/lib/_fs2sint.c, device/lib/_fs2char.c:
	  Properly convert floats between -1.0 and 0.0 to long, int, and char
	  types (max integer value of negative floats tends to zero).
	* device/lib/modff.c, device/lib/ceilf.c, device/lib/floorf.c:
	  Removed changes made so to work properly with floats between
	  -1.0 and 0.0, as the problem is fixed in _fs2slong.c, _fs2sint.c,
	  and _fs2char.c

2005-11-18 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCcse.c (ReplaceOpWithCheaperOp): minor fix for debugging only
	* src/mcs51/gen.c (genUnpackBits): better code and a fix,
	(genCast) cosmetic change
	* src/ds390/gen.c (genUnpackBits, ): ported from mcs51
	* src/ds390/ralloc.c (packRegsForAssign): ported fix for bitfields
	from mcs51
	* support/regression/tests/bitfields (testSignedBitfields): added

2005-11-18 Borut Razem <borut.razem AT siol.net>

	* sdcc/device/lib/Makefile.in: remove all unnecessary files
	* device/lib/pic/Makefile.rules, device/lib/pic16/Makefile.subdir:
	  introduced SILENT option to make building of pic16 libraries less

2005-11-18 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/modff.c, device/lib/ceilf.c, device/lib/floorf.c:
	  Now they work properly with floats between -1.0 and 0.0
	* device/lib/printf_large.c: Removed temporary patch for bug 1358192

2005-11-18 Maarten Brock <sourceforge.brock AT dse.nl>
