@@ -1,3 +1,7 @@
+2005-11-23 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCast.c (createIvalCharPtr): fixed bug 1348271
+
 2005-11-22 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/_fs2schar.c,
